# Sherlog-parser

./: .env  .gitignore  LICENSE  README.md  benchmark_python.py  benchmark_results.txt  build_cpp.sh  config.yaml  docker-compose.yml  download_datasets.sh  evaluate.sh  evaluate_local.py  mkdocs.yml  performance_comparison_report.html  requirements.txt  run_benchmark.sh  run_log_analyzer.sh  run_performance_report.sh  setup.py  start.sh
benchmark/: generate_report.py  run_python_benchmarks.py
cpp/: CMakeLists.txt  CMakeLists.txt.simple  Makefile  README.md  build.sh  build_minimal.sh  compile_direct.sh  run_benchmarks.sh  simple_build.sh
cpp/benchmarks/: CMakeLists.txt  numeric_analysis_benchmark.cpp
cpp/benchmarks/log_parser/: log_parser_benchmark.cpp
cpp/include/: anomaly_detector.hpp  log_parser.hpp  log_prefilter.hpp  numeric_analysis.hpp  prefix_tree.hpp  template_matcher.hpp
cpp/src/: anomaly_detector.cpp  benchmark.cpp  log_parser.cpp  log_prefilter.cpp  main.cpp  numeric_analysis.cpp  prefix_tree.cpp  template_matcher.cpp
cpp/tests/: CMakeLists.txt  numeric_analysis_test.cpp  test_main.cpp
docs/: algorithm.md  evaluation-framework.md  index.md
docs/api/core/: pipeline.md
docs/development/: architecture.md  contributing.md
docs/user-guide/: configuration.md  docker.md  installation.md  quickstart.md
scripts/: init_ollama.sh
src/: __init__.py  analyze_anomalies.py  config.py  incident_analyzer.py
src/config/: dagster.yaml  default.env  docker-compose.yml  requirements.txt  workspace.yaml
src/core/: __init__.py  anomaly_explanation.py  anomaly_incidents.py  assets.py  cache.py  clustering.py  config.py  constants.py  embeddings.py  error_handler.py  errors.py  eval.py  llm.py  log_prefilter.py  logai_agent_tools.py  logai_tools.py  logging.py  logging_config.py  metrics.py  numeric_analysis.py  parser_service.py  patterns.py  pipeline.py  regex.py  storage.py  template_matcher.py  timeseries.py  utils.py
src/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.dagster  Dockerfile.eval  Dockerfile.streamlit  Dockerfile.test  Dockerfile.ui  init-dagster.sh  init-ollama.sh
src/eval/: README.md  config.yaml  datasets.py  eval_pipeline.py  metrics.py  run_config.yaml  ui.py
src/models/: __init__.py  clustering.py  config.py  data.py  llm_config.py  model_manager.py  regex.py
src/pathway_pipeline/: __init__.py  eval_pipeline.py  pipeline.py  schema.py
src/prompts/: __init__.py  log_parser.py  models.py
src/services/api/: api.py  main.py  parser.py
src/services/ui/: app.py
src/tests/: test_clustering.py
src/ui/: anomaly_detector.py  app.py  components.py  log_analyzer.py
src/utils/: progress.py
tests/: test_ollama_integration.py
